# mrpack

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  test.rs
tests/: Adrenaline-1.24.0+1.21.1.fabric.mrpack  Fabulously.Optimized-v6.1.0-beta.7.mrpack  LICENSE  Sodium.Plus-v2.3.1.mrpack  VanillaEnhanced-1.21-20240918.mrpack
