[package]
version = "0.2.0"
edition = "2021"
authors = ["koniifer"]
name = "mrpack"

[lib]
doctest = false

[dependencies]
serde_json = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
ureq = { version = "2", optional = true, default-features = false }
zip = { version = "2", default-features = false, features = [
	"deflate",
], optional = true }

[features]
default = ["std", "fs"]
resolve = ["dep:ureq"]
alloc = ["serde_json/alloc", "serde/alloc"]
std = ["serde_json/std", "serde/std"]
fs = ["dep:zip"]
